fix to show array designs on IE
git-svn-id: svn://bar.ebi.ac.uk/trunk/arrayexpress-interface@16270 2913f559-6b04-0410-9a09-c530ee9f5186

--- a/webapp/src/main/webapp/assets/stylesheets/ae_arrays_20.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae_arrays_20.css
@@ -116,7 +116,7 @@ body {
     table-layout: fixed;
     width: 100%;
     margin: 10px 0 0;
-    background-color: white;
+    background-color: rgba(255,255,255,0.67);
 }
 
 #ae_results_table th,
